# yanyu-wit-develop

./: .dockerignore  .gitignore  Dockerfile.sandbox  Dockerfile.server  README.md  build_pc.py  install.sh  pyproject.toml  start.sh  wit.spec
agent/: runtime.py
agent/middlewares/: acps.py  compression.py  filesystem.py  memory.py  skills.py  yanyu.py
agent/middlewares/utils/: __init__.py  compression_prompt.py  memory_types.py
agent/shell/: __init__.py  base_engine.py  container_manager.py  docker_engine.py  local_engine.py  local_sandbox.py  models.py  path_validator.py  sandbox_manager.py
cli/: __init__.py  __main__.py  config.py  main.py
cli/acps-cli/: .env.example  .gitignore  .pre-commit-config.yaml  Justfile  README.md  acps-cli.toml  pyproject.toml
cli/acps-cli/.acps-cli/tokens/: registry-admin.json  registry-user.json
cli/acps-cli/.github/: copilot-instructions.md
cli/acps-cli/.github/instructions/: commit-message.instructions.md  python.instructions.md  tests.instructions.md
cli/acps-cli/acps_cli/: __init__.py  main.py
cli/acps-cli/acps_cli/ca/: __init__.py  acme.py  commands.py  config.py  keys.py  unified.py  utils.py
cli/acps-cli/acps_cli/discovery/: __init__.py  client.py  commands.py  unified.py
cli/acps-cli/acps_cli/mq/: __init__.py  auth_probe_cmd.py  client.py  config.py  group_cmd.py  unified.py
cli/acps-cli/acps_cli/registry/: __init__.py  admin_commands.py  client.py  commands.py  config.py  exceptions.py  output.py  storage.py  unified.py
cli/acps-cli/acps_cli/shared/: cli_logging.py  config.py  output.py  runtime.py  unified_config.py
cli/acps-cli/docs/: atr-execution-ledger.md  atr-execution-plan.md  atr-gap-analysis.md  atr-release-readiness.md  ca-cli.md  cross-repo-test-refactor-plan.md  disco-cli.md  joint-e2e-design.md  joint-e2e-execution-ledger.md  just-command-plan.md  mq-auth-cli-execution-ledger.md  mq-auth-cli-execution-plan.md  mq-auth-cli.md  reg-admin-cli.md  reg-cli.md  unified-cli-design.md  unified-cli-execution-ledger.md  unified-cli-execution-plan.md
cli/acps-cli/docs/unified-cli-execution-evidence/phase-0/: step-0.1.md  step-0.2.md
cli/acps-cli/tests/: _local_services.py  _registry_mtls.py  conftest.py
cli/acps-cli/tests/e2e/: conftest.py  test_atr_eab_workflow.py  test_ca_lifecycle_workflow.py  test_ca_revocation_workflow.py  test_discovery_410_fallback_workflow.py  test_discovery_fanout_workflow.py  test_discovery_forwarder_workflow.py  test_discovery_incremental_sync_workflow.py  test_discovery_runtime_control_workflow.py  test_discovery_snapshot_sync_workflow.py  test_discovery_structured_query_workflow.py  test_discovery_webhook_sync_workflow.py  test_mq_auth_provision_workflow.py
cli/acps-cli/tests/fixtures/cli-help/: admin-discovery.txt  admin.txt  cert.txt  root.txt
cli/acps-cli/tests/integration/: conftest.py  test_ca_cli.py  test_disco_cli.py  test_mq_auth_group_workflow.py  test_reg_admin_cli.py  test_reg_cli.py
cli/acps-cli/tests/unit/: test_unified_cli_help.py  test_unified_config_bridge.py
cli/acps-cli/tests/unit/test_ca/: test_account_key_model.py  test_acme.py  test_cli_commands.py  test_config.py  test_keys.py  test_utils.py
cli/acps-cli/tests/unit/test_discovery/: test_client.py  test_commands.py
cli/acps-cli/tests/unit/test_mq/: __init__.py  test_cli_commands.py  test_client.py  test_config.py
cli/acps-cli/tests/unit/test_registry/: conftest.py  test_cli_admin.py  test_cli_user.py  test_client.py  test_config.py
cli/commands/: atr_cmd.py  bugreport_cmd.py  config_cmd.py  init_cmd.py  logs_cmd.py  provider_cmd.py  start_cmd.py  status_cmd.py
cli/utils/: __init__.py  credentials.py  logging_config.py  port.py  secrets.py
heartbeat/: __init__.py  executor.py  models.py  scheduler.py  store.py  tools.py
provider/: __init__.py  dynamic_model.py  factory.py
service/: __init__.py  app.py  auth.py  auth_router.py  context.py  db.py  entity_manager.py  feature_flags.py  logger_formatter.py  models.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.css  App.jsx  index.css
web/src/api/: client.js
web/src/components/: AcpsOverview.css  AcpsOverview.jsx  Callback.css  Callback.jsx  (+20 more)
yanyu_wit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+1 files in other folders)
