[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yanyu-wit"
version = "2.1.0"
description = "🚀 Yanyu-Wit — 社交信息服务代理个人助手 CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "langchain-core>=0.3.51",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "tomlkit>=0.13.0",
    "rich>=13.0.0",
    "pydantic>=2.10.0",
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2.0",
    "pyjwt>=2.13.0",
    "croniter>=2.0.0",
    "acps-cli",
    "acps-sdk",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.3.0"]
google = ["langchain-google-genai>=2.0.0"]
all-providers = ["langchain-anthropic>=0.3.0", "langchain-google-genai>=2.0.0"]
saas = [
    "docker>=7.0.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "langgraph-checkpoint-postgres>=2.0.0"
]

[project.scripts]
wit = "cli.main:main"

[tool.setuptools]
packages = [
    "cli",
    "cli.utils",
    "cli.commands",
    "agent",
    "agent.shell",
    "agent.middlewares",
    "agent.middlewares.utils",
    "service",
    "provider",
]

[tool.uv.sources]
acps-cli = { path = "cli/acps-cli" }
